style(buttons): Spacing updates and fixed some styles for buttons

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -5,7 +5,12 @@
 }
 
 .auth {
+  padding: 30px;
   text-align: center;
+}
+
+.authTitle {
+  margin: 0 0 20px;
 }
 
 .content {
